[package]
name = "jump"
version = "0.1.0"
edition = "2021"
description = "A command line tool can manage your ssh servers easily."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
toml = "0.7.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1.0.95"
home = "0.5.4"
